--- a/markup/source/sass/global/variables.scss
+++ b/markup/source/sass/global/variables.scss
@@ -9,5 +9,6 @@ $roboto: "Roboto", "Arial", sans-serif;
 $light-white: rgba(255, 255, 255, 0.75);
 $white: #FFFFFF;
 $blue: #A8D4E9;
-$grey: #DADADA;;
+$grey: #DADADA;
+$dark-grey: #586a72;
 $black: #000000;
