--- a/markup/source/sass/blocks/content.scss
+++ b/markup/source/sass/blocks/content.scss
@@ -11,6 +11,11 @@
   margin: 0 30px 30px 0;
   background-color: $blue;
 
+  &:active {
+    opacity: 0.5;
+    transform: scale(1);
+  }
+
   // @media (min-width: $tablet-width) {
   //   &:nth-child(3n + 3) {
   //     margin: 0 0 30px 0;
@@ -41,7 +46,11 @@
   cursor: pointer;
 
   &:hover {
-    background-color: $grey;
+    background-color: $white;
+  }
+
+  &:active {
+    background-color: $light-white;
   }
 
   &::before {
@@ -54,6 +63,14 @@
     background-image: url(../../img/cross.svg);
     background-repeat: no-repeat;
     background-position: center;
+  }
+
+  &:hover::before {
+    opacity: 0.7;
+  }
+
+  &:active::before {
+    opacity: 0.4;
   }
 }
 
