--- a/markup/source/sass/blocks/game.scss
+++ b/markup/source/sass/blocks/game.scss
@@ -51,6 +51,13 @@
   width: 180px;
   height: 220px;
   background-color: $grey;
+  cursor: pointer;
+  transition: 0.4s ease;
+
+  &:hover {
+    transform: scale(1.07);
+    box-shadow: 1px 1px 12px $dark-grey;
+  }
 }
 
 .game__img {
